fix: comment overflow

--- a/titangene/styles-03.css
+++ b/titangene/styles-03.css
@@ -150,7 +150,7 @@ footer .container {
   margin: auto;
   padding: 20px 0;
   font-size: 0;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 footer .container::after {
   clear: left;
